--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@
     }
     .companytext{
         width: 250px;
+        font-size: 1rem;
     }
     .findout{
         width: 200px;
@@ -185,7 +186,8 @@
         width: 350px;
     }
     .companytext{
-        width: 300px;
+        width: 250px;
+        font-size: 1rem;
     }
     .findout{
         width: 160px;
@@ -213,7 +215,8 @@
         width: 250px;
     }
     .companytext{
-        width: 200px;
+        width: 190px;
+        font-size: 0.9rem;
     }
     .findout{
         width: 130px;
